--- a/frontend/vanilla-ui/record-none.html
+++ b/frontend/vanilla-ui/record-none.html
@@ -33,7 +33,7 @@
 
     <div class="dialog">
         <div class="recording-none">
-            <img src="./assets/Wink.png" alt="">
+            <img draggable="false" src="./assets/Wink.png" alt="">
             <h4>So empty in here</h4>
             <p>I wonder what that button does...</p>
         </div>
