--- a/frontend/vanilla-ui/session-end.html
+++ b/frontend/vanilla-ui/session-end.html
@@ -33,7 +33,7 @@
 
     <div class="dialog">
         <div class="recording-none">
-            <img src="./assets/Sleepy.png" alt="">
+            <img draggable="false" src="./assets/Sleepy.png" alt="">
             <h4>This session has ended</h4>
             <p>Thank you for using Live Record.</p>
         </div>
