--- a/frontend/vanilla-ui/host.html
+++ b/frontend/vanilla-ui/host.html
@@ -24,14 +24,14 @@
                 <h5>Join session</h5>
             </a>
             <a href="#">
-                <h5 class="outlined-button">Host session</h5>
+                <h5 class="outlined-button">Start session</h5>
             </a>
         </div>
     </nav>
 
     <div class="dialog">
         <div>
-            <h3>Host session</h3>
+            <h3>Start session</h3>
             <label for="display-name" class="input-label" title="Enter your email to log in">Display name</label>
             <input id="display-name" placeholder="Display name (visible to other users)" class="input"
                 onkeypress="return /[a-z]/i.test(event.key)">
