--- a/frontend/vanilla-ui/landing.html
+++ b/frontend/vanilla-ui/landing.html
@@ -23,7 +23,7 @@
                 <h5>Join session</h5>
             </a>
             <a href="#">
-                <h5 class="outlined-button">Host session</h5>
+                <h5 class="outlined-button">Start session</h5>
             </a>
         </div>
     </nav>
