--- a/frontend/vanilla-ui/record-none.html
+++ b/frontend/vanilla-ui/record-none.html
@@ -26,7 +26,7 @@
                 <h5>Join session</h5>
             </a>
             <a href="#">
-                <h5 class="outlined-button">Host session</h5>
+                <h5 class="outlined-button">Start session</h5>
             </a>
         </div>
     </nav>
@@ -37,7 +37,7 @@
             <h4>So empty in here</h4>
             <p>I wonder what that button does...</p>
         </div>
-        <button class="primary-btn">Host session</button>
+        <button class="primary-btn">Start session</button>
     </div>
 </body>
 
