--- a/frontend/vanilla-ui/room/room.html
+++ b/frontend/vanilla-ui/room/room.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-    <div class="room-wrapper">
-
+    <div class="wrapper">
         <div class="room-nav">
             <div class="top-nav">
                 <button id="record" class="fab-btn"></button>
@@ -31,7 +30,9 @@
         </div>
 
         <div class="main-view">
-            <div class="example-canvas"></div>
+            <div class="example-canvas-wrapper">
+                <div class="example-canvas"></div>
+            </div>
         </div>
 
         <div class="side-ex-wrapper">
