All styles changes

--- a/frontend/vanilla-ui/session-join1/join1.html
+++ b/frontend/vanilla-ui/session-join1/join1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Session ended</title>
+    <title>Join session P1</title>
     <link rel="stylesheet" href="../general.css">
     <link rel="stylesheet" href="../navbar.css">
 </head>
@@ -29,12 +29,12 @@
     </nav>
 
     <div class="card">
-        <div class="recording-none">
-            <img draggable="false" src="../images/Sleepy.png" alt="">
-            <h4>This session has ended</h4>
-            <p>Thank you for using Live Record.</p>
+        <div>
+            <h3>Join session</h3>
+            <label for="display-name" class="input-label" title="Enter your email to log in">Enter session code</label>
+            <input id="session-code" placeholder="Six digit session code" class="input" pattern="\d*" maxlength="6">
         </div>
-        <button class="primary-btn">Home page</button>
+        <button class="primary-btn">Continue</button>
     </div>
 </body>
 
