--- a/frontend/vanilla-ui/landing/landing.html
+++ b/frontend/vanilla-ui/landing/landing.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landing</title>
-    <link rel="stylesheet" href="../navbar.css">
+    <title>Landing</title>
     <link rel="stylesheet" href="../general.css">
+    <link rel="stylesheet" href="../navbar.css">
     <link rel="stylesheet" href="landing.css">
 </head>
 
 <body class="max-width">
     <nav id="navbar">
         <a href="">
-            <img src="../images/logo.svg" alt="Live Demo Logo">
+            <img draggable="false" src="../images/logo.svg" alt="Live Demo Logo">
         </a>
         <div class="nav-links">
             <a href="">
@@ -43,40 +43,40 @@
                 <button class="cta-btn">Start recording now</button>
             </div>
 
-            <img class="hero-img" src="../images/HeroImage.png" alt="">
+            <img draggable="false" class="hero-img" src="../images/HeroImage.png" alt="">
         </div>
 
         <h3 class="title">Features</h3>
         <div class="row-cards">
             <div class="card purple">
-                <img src="../images/Selfie.png" alt="">
+                <img draggable="false" src="../images/Selfie.png" alt="">
                 <h2>Record</h2>
                 <p>Record the video, audio and screen of everyone in the room. Recordings are saved to the host's
                     device.</p>
             </div>
             <div class="card blue">
-                <img src="../images/StarEyes.png" alt="">
+                <img draggable="false" src="../images/StarEyes.png" alt="">
                 <h2>Collaborate</h2>
                 <p>Collaborate with up to four members of your team in real time with screen drawing and shape creation.
                 </p>
             </div>
             <div class="card yellow">
-                <img src="../images/FaceWithMask.png" alt="">
+                <img draggable="false" src="../images/FaceWithMask.png" alt="">
                 <h2>No accounts</h2>
                 <p>You can create and join a room quickly. No account required and the site works well on any device.
                 </p>
             </div>
         </div>
         <div class="long-card">
-            <img class="mobile-edge" src="../images/edge.svg" alt="">
+            <img draggable="false" class="mobile-edge" src="../images/edge.svg" alt="">
             <div>
                 <h2>Works best on Chromium browsers</h2>
                 <p>Ensuring your experience is the best it can be we recommend using a Chromium browser like Google
                     Chrome or Microsoft Edge.</p>
             </div>
             <div class="browsers">
-                <img src="../images/chrome.svg" alt="">
-                <img src="../images/edge.svg" alt="">
+                <img draggable="false" src="../images/chrome.svg" alt="">
+                <img draggable="false" src="../images/edge.svg" alt="">
             </div>
         </div>
 
