--- a/frontend/vanilla-ui/recordings-none/record-none.html
+++ b/frontend/vanilla-ui/recordings-none/record-none.html
@@ -5,35 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Record</title>
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/general.css">
-    <link rel="stylesheet" href="styles/host.css">
-    <link rel="stylesheet" href="styles/button.css">
-    <link rel="stylesheet" href="styles/dialog.css">
-    <link rel="stylesheet" href="styles/join.css">
-    <link rel="stylesheet" href="styles/recordings-none.css">
+    <title>Recordings (None)</title>
+    <link rel="stylesheet" href="../general.css">
+    <link rel="stylesheet" href="../navbar.css">
 </head>
 
 <body class="max-width">
     <nav id="navbar">
-        <img src="assets/logo.svg" alt="Live Demo Logo">
+        <a href="">
+            <img draggable="false" src="../images/logo.svg" alt="Live Demo Logo">
+        </a>
         <div class="nav-links">
-            <a href="#">
+            <a href="">
                 <h5>Recordings</h5>
             </a>
-            <a href="#">
+            <a href="">
                 <h5>Join session</h5>
             </a>
-            <a href="#">
-                <h5 class="outlined-button">Start session</h5>
-            </a>
+            <button class="outlined-button">
+                <h5>Start session</h5>
+            </button>
         </div>
     </nav>
 
-    <div class="dialog">
+    <div class="card">
         <div class="recording-none">
-            <img draggable="false" src="./assets/Wink.png" alt="">
+            <img draggable="false" src="../images/Wink.png" alt="">
             <h4>So empty in here</h4>
             <p>I wonder what that button does...</p>
         </div>
