--- a/frontend/vanilla-ui/room/room.html
+++ b/frontend/vanilla-ui/room/room.html
@@ -6,26 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Room</title>
-    <link rel="stylesheet" href="room.css">
     <link rel="stylesheet" href="../general.css">
-
+    <link rel="stylesheet" href="room.css">
 </head>
 
 <body>
     <div class="wrapper">
         <div class="room-nav">
             <div class="top-nav">
-                <button id="record" class="fab-btn"></button>
-                <button id="play-pause" class="fab-btn"></button>
-                <button id="video" class="fab-btn"></button>
-                <button id="mic" class="fab-btn"></button>
-                <button id="screen-share" class="fab-btn"></button>
-                <button id="end-call" class="fab-btn"></button>
+                <button title="Toggle recording" id="record" class="fab-btn"></button>
+                <button title="Toggle play and pause" id="play-pause" class="fab-btn"></button>
+                <button title="Toggle videocamera" id="video" class="fab-btn"></button>
+                <button title="Toggle microphone" id="mic" class="fab-btn"></button>
+                <button title="Toggle screenshare" id="screen-share" class="fab-btn"></button>
+                <button title="End call" id="end-call" class="fab-btn"></button>
             </div>
             <div class="bot-nav">
-                <button id="copy-url" class="fab-btn"></button>
-                <button id="draw" class="fab-btn"></button>
-                <button id="message" class="fab-btn"></button>
+                <button title="Copy session URL" id="copy-url" class="fab-btn"></button>
+                <button title="Open drawing panel" id="draw" class="fab-btn"></button>
+                <button title="Open messaging panel" id="message" class="fab-btn"></button>
             </div>
         </div>
 
@@ -37,7 +36,7 @@
 
         <div class="side-ex-wrapper">
             <div class="session-header">
-                <button id="fullscreen" class="fab-btn"></button>
+                <button title="Toggle fullscreen mode" id="fullscreen" class="fab-btn"></button>
                 <div>
                     <p>Session code:</p>
                     <h3>97325</h3>
