--- a/frontend/vanilla-ui/session-start/start.html
+++ b/frontend/vanilla-ui/session-start/start.html
@@ -5,30 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Record</title>
-    <link rel="stylesheet" href="../navbar.css">
+    <title>Start session</title>
     <link rel="stylesheet" href="../general.css">
-    <link rel="stylesheet" href="start.css">
-
+    <link rel="stylesheet" href="../navbar.css">
 </head>
 
 <body class="max-width">
     <nav id="navbar">
-        <img src="..image/logo.svg" alt="Live Demo Logo">
+        <a href="">
+            <img draggable="false" src="../images/logo.svg" alt="Live Demo Logo">
+        </a>
         <div class="nav-links">
-            <a href="#">
+            <a href="">
                 <h5>Recordings</h5>
             </a>
-            <a href="#">
+            <a href="">
                 <h5>Join session</h5>
             </a>
-            <a href="#">
-                <h5 class="outlined-button">Start session</h5>
-            </a>
+            <button class="outlined-button">
+                <h5>Start session</h5>
+            </button>
         </div>
     </nav>
 
-    <div class="dialog">
+    <div class="card">
         <div>
             <h3>Start session</h3>
             <label for="display-name" class="input-label" title="Enter your email to log in">Display name</label>
