--- a/frontend/vanilla-ui/landing/landing.html
+++ b/frontend/vanilla-ui/landing/landing.html
@@ -48,19 +48,19 @@
 
         <h3 class="title">Features</h3>
         <div class="row-cards">
-            <div class="card purple">
+            <div class="display-card purple">
                 <img draggable="false" src="../images/Selfie.png" alt="">
                 <h2>Record</h2>
                 <p>Record the video, audio and screen of everyone in the room. Recordings are saved to the host's
                     device.</p>
             </div>
-            <div class="card blue">
+            <div class="display-card blue">
                 <img draggable="false" src="../images/StarEyes.png" alt="">
                 <h2>Collaborate</h2>
                 <p>Collaborate with up to four members of your team in real time with screen drawing and shape creation.
                 </p>
             </div>
-            <div class="card yellow">
+            <div class="display-card yellow">
                 <img draggable="false" src="../images/FaceWithMask.png" alt="">
                 <h2>No accounts</h2>
                 <p>You can create and join a room quickly. No account required and the site works well on any device.
